--- a/index.html
+++ b/index.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Jogo em cosntrução</title>
+    <title>Passinho do romano</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header></header>
+    <header>
+      <div class="image">
+        <img src="./assets/images/colisseum.png" class="image-logo" />
+      </div>
+      <h1>PASSINHO DO ROMANO</h1>
+    </header>
+
+    <script src="./index.js"></script>
   </body>
 </html>
