Inicio da criação do corpo da pagina

--- a/index.html
+++ b/index.html
@@ -14,6 +14,22 @@
       </div>
       <h1>PASSINHO DO ROMANO</h1>
     </header>
+    <div class="container-texto1">
+      <p class="texto1">
+        Codificar e decodificar mensagens usando <strong>Base64</strong> ou
+        <strong>Cifra de César.</strong>
+      </p>
+    </div>
+    <div class="titulo2">
+      <h2>Para usar é simples, basta você fazer o seguinte:</h2>
+    </div>
+    <div class="container-lista">
+      <ol type="I">
+        <li>Escolher qual metodo de codificação;</li>
+        <li>Escolha se vai codificar ou decodificar;</li>
+        <li>Na Cifra de César você precisa selecionar o número de chave</li>
+      </ol>
+    </div>
 
     <script src="./index.js"></script>
   </body>
