Terminando a estilização basica do site

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <div class="container-mensagem">
           <div id="btn-submit" class="btn-submit">
             <button id="btn" class="btn main" type="submit" value="">
-              codificar
+              CODIFICAR
             </button>
           </div>
 
@@ -113,6 +113,10 @@
         </div>
       </form>
     </section>
+
+    <footer>
+      <span>Site criado por Matheus Casteli &copy;2022</span>
+    </footer>
 
     <script src="./index.js"></script>
   </body>
